@@ -1,5 +1,6 @@
 v1.5.6 (WIP)
 - Draw additional accents when rendering a list divider
+- Update List, Table and TreeView to not handle Tab or Backtab
 
 v1.5.5 (2020-05-24)
 - Fix Application.Suspend by restructuring event loop (queued updates will now only run between draws)
